# unison-fs

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  install.sh  llms.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/unisonfs/: Cargo.toml
crates/unisonfs-core/: Cargo.toml
crates/unisonfs-core/src/: agent_hint.rs  lib.rs
crates/unisonfs-core/src/api/: dto.rs  error.rs  mod.rs
crates/unisonfs-core/src/cache/: db.rs  file.rs  fs.rs  hydration.rs  mod.rs  profile.rs  schema.sql  tests.rs
crates/unisonfs-core/src/config/: credentials.rs  mod.rs
crates/unisonfs-core/src/daemon/: client.rs  ipc.rs  mod.rs  protocol.rs
crates/unisonfs-core/src/mount/: fuse.rs  mod.rs  nfs.rs
crates/unisonfs-core/src/sync/: mod.rs  pull.rs  push.rs  scan.rs
crates/unisonfs-core/src/vfs/: error.rs  mem.rs  mod.rs  mode.rs  path.rs  traits.rs  types.rs
crates/unisonfs-core/tests/: smoke_test.rs
crates/unisonfs/src/: main.rs
crates/unisonfs/src/cmd/: auth.rs  daemon_inner.rs  daemon_runtime.rs  grep.rs  init.rs  install.rs  list.rs  login.rs  logout.rs  logs.rs  marker.rs  mod.rs  mount.rs  provision.rs  startup.rs  status.rs  sync.rs  unmount.rs  whoami.rs
docker/: Dockerfile.release
