[workspace]
resolver = "2"
members = [
    "crates/unisonfs-core",
    "crates/unisonfs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/unison-labs-ai/unison-fs"
authors = ["Unison Labs AI <hello@unisonlabs.ai>"]

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# errors + logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sync primitives + POSIX constants
parking_lot = "0.12"
libc = "0.2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SQLite cache
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
lru = "0.12"

# Mount backends
# fuser is Linux-only: on macOS it requires macFUSE which we deliberately avoid.
# nfsserve is unix-wide: pure Rust, used as the NFSv3 server on macOS.
fuser = "0.17"
nfsserve = "0.11"

# internal
unisonfs-core = { path = "crates/unisonfs-core" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
