[package]
name = "unisonfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "unisonfs CLI — mount the Unison brain as a local filesystem"

[[bin]]
name = "unisonfs"
path = "src/main.rs"

[dependencies]
unisonfs-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = "3"
